data/all_generated_tests/raw_wast_tests/block_StackCorruption_1893.wast
;; 4. **Test Description**: Construct a block that includes a `br_if` instruction with a conditional stack pop operation. Include paths that do and do not branch, validating whether the stack's state is coherent regardless of the branching decision.

(assert_invalid
  (module (func $br_if_stack_behavior
    (block (result i32)
      (i32.const 1)
      (br_if 0 (i32.const 0))
      (i32.const 2)
    )
  ))
  "type mismatch"
)